[package]
name = "hook_escape_calculator"
version = "0.3.1"
authors = ["Martin Olsen<Martin.Olsen2@protonmail.com>"]
edition = "2024"
license = "GPL-3"
license-file = "LICENSE.txt"
description = "A calculator for the odds of escape in the video game Dead By Daylight."

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "hook_escape_calculator"
path = "src/main.rs"

[dependencies]
arrayvec = "0.7.6"
frunk = "0.4.3"
konst = "0.3.15"
iced = "0.13.1"
derive_more = { version = "2.0.1", features = ["display"] }
# consider eliminating derive_more in favor of strum derive display
strum = { version = "0.27.1", features = ["derive"] }
derive-getters = {version = "0.5.0", features = ["auto_copy_getters"] }
mimalloc = "0.1.46"
# num-rational integration planned for future release

[dev-dependencies]
float-cmp = "0.10.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
