[package]
name = "hook_escape_calculator"
version = "0.4.0"
authors = ["Martin Olsen<Martin.Olsen2@protonmail.com>"]
edition = "2024"
license = "GPL-3"
license-file = "LICENSE.txt"
description = "A calculator for the odds of escape from the hook in the video game Dead By Daylight."
readme = "README.md"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "Hook-Escape-Calculator"
path = "src/main.rs"

[dependencies]
bon = "3.6.3"
nutype = "0.6.1"
arrayvec = "0.7.6"
konst = "0.3.15"
iced = "0.13.1"
derive_more = { version = "2.0.1", features = ["display"] }
strum = { version = "0.27.1", features = ["derive"] }
derive-getters = {version = "0.5.0", features = ["auto_copy_getters"] }

[dev-dependencies]
float-cmp = "0.10.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
